--- a/package.json
+++ b/package.json
@@ -24,22 +24,28 @@
   "homepage": "https://github.com/PaulAkarsanaDevara/event-ticketing-api#readme",
   "dependencies": {
     "awilix": "^12.0.5",
+    "bcrypt": "^6.0.0",
     "bull": "^4.16.5",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.4.3",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.5",
     "qrcode": "^1.5.4",
     "redis": "^5.8.0",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.10.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.2.1",
     "@types/qrcode": "^1.5.5",
