--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redis": "^5.8.0",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
